# wiki

./: .gitignore  .textlintrc.json  README.md  docusaurus.config.js  mkdocs.yml  package-lock.json  package.json  pyproject.toml  requirements.txt
docs/: index.md  resource.md  toolkit.md
docs/coding/: _category_.yml  bash.md  database.md  git.md  gitlab.md  go.md  index.md  interview.md  markdown.md  neovim.md  python.md  tmux.md  vim.md  volta.md  zsh.md
docs/coding/frontend/: css.md  index.md  javascript.md  react.md
docs/coding/python/: index.md  oauthlib.md  poetry.md
docs/devops/: _category_.yml  ansible.md  docker.md  ssh.md
docs/devops/kubernetes/: cert-manager.md  index.md  k3s.md  kustomize.md
docs/engineering/: frontend.md  jenkins.md  python.md
docs/life/: _category_.yml  camera.md  english.md  japan.md  recipe.md
docs/life/japan/: fe.md  index.md  sg.md
docs/misc/: fe.md  index.md  japan.md  recipe.md  sg.md
docs/programming/: _category_.yml  database.md
docs/programming/frontend/: index.md  javascript.md
docs/selfhosted/: acme.sh.md  code-server.md  installation.md  postgresql.md
docs/services/: _category_.yml  cloudflare.md  gitlab.md
docs/setup/: android.md
docs/sysadmin/: _category_.yml  android.md  archlinux.md  chromeos.md  cloudflare.md  ipv6.md  postgresql.md  providers.md  services.md
docs/sysadmin/archlinux/: index.md  packages.md
docs/tools/: _category_.yml  ansible.md  docker.md  docusaurus.md  filebeat.md  tmux.md  volta.md
docs/tools/kubernetes/: cert-manager.md  index.md  k3s.md
src/css/: custom.css
